--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,12 +10,15 @@
     <string name="_2015">2015</string>
     <string name="_2016">2016</string>
     <string name="calculate">Calculate</string>
+    <string name="call_phone">Call phone</string>
+    <string name="hasil_gov">hasil.gov</string>
+    <string name="reset">Reset</string>
 
     <string-array name="TaxableIncome">
-        <string name="0 to 5000">0 to 5000</string>
-        <string name="5000 to 20000">5000 to 20000</string>
-        <string name="20001 to 35000">20001 to 35000</string>
-        <string name="35001 and above">35001 and above</string>
+        <item name="0 to 5000">0 to 5000</item>
+        <item name="5000 to 20000">5000 to 20000</item>
+        <item name="20001 to 35000">20001 to 35000</item>
+        <item name="35001 and above">35001 and above</item>
     </string-array>
 
 </resources>
