update a little of calculation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     </string-array>
 
     <string name="noname">Please fill in your name </string>
+    <string name="result">Result</string>
+    <string name="resultShow">Result will show here</string>
 </resources>
