--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,8 @@
     <string name="textViewTittle">mobile income tax calculator for taxpayers</string>
     <string name="name">Name</string>
     <string name="age">Age</string>
+    <string name="underage">you are underage</string>
     <string name="incomeTax">Tax(Income)(RM)</string>
-    <string name="below_26">Below 26</string>
-    <string name="_26_and_above">26 and above</string>
     <string name="year">Year</string>
     <string name="_2015">2015</string>
     <string name="_2016">2016</string>
@@ -13,16 +12,21 @@
     <string name="call_phone">Call phone</string>
     <string name="hasil_gov">hasil.gov</string>
     <string name="reset">Reset</string>
-    <string name="aboveAge">You are above 26</string>
-    <string name="belowAge">You are below 26</string>
-    <string-array name="TaxableIncome">
-        <item name="0 to 5000">0 to 5000</item>
-        <item name="5000 to 20000">5000 to 20000</item>
-        <item name="20001 to 35000">20001 to 35000</item>
-        <item name="35001 and above">35001 and above</item>
+    <string name="notax">No tax needed to pay</string>
+    <string-array name="age">
+        <item> below 26 years old</item>
+        <item> 26 and above</item>
     </string-array>
 
     <string name="noname">Please fill in your name </string>
     <string name="result">Result</string>
     <string name="resultShow">Result will show here</string>
+    <string name="Showresult">
+        Tax %% for year 2015 at %d%%\n
+        Tax %% for year 2016 at %d%%\n
+        Total amount income tax in year 2015 is RM%.2f\n
+        Total amount for income tax in year 2016 is RM%.2f\n
+    </string>
+    <string name="rm">RM</string>
+    <string name="resultMessage">This is your tax, %s.\n</string>
 </resources>
